--- a/springboot-mybatis-quickstart/pom.xml
+++ b/springboot-mybatis-quickstart/pom.xml
@@ -29,11 +29,12 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<!--上一个版本的驱动包-->
 <!--		<dependency>-->
 <!--			<groupId>mysql</groupId>-->
 <!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<version>8.0.33</version>-->
+<!--			<scope>runtime</scope>-->
 <!--		</dependency>-->
 
 		<!--springboot单元测试-->
@@ -48,6 +49,21 @@
 			<version>3.0.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!--druid连接池-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.2.21</version>
+		</dependency>
+		
+		<!--lombok-->
+		<!--不用指定version,springboot父工程已经集成了lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
