--- a/web-management/src/main/resources/application.properties
+++ b/web-management/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=3091
 
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.servlet.multipart.max-file-size=10MB
+
+spring.servlet.multipart.max-request-size=100MB
