--- a/web-management/pom.xml
+++ b/web-management/pom.xml
@@ -89,6 +89,11 @@
             <version>4.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
