--- a/web-management/pom.xml
+++ b/web-management/pom.xml
@@ -113,6 +113,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.45</version>
+        </dependency>
+
     </dependencies>
 
     <build>
