--- a/web-management/pom.xml
+++ b/web-management/pom.xml
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
-            <version>2.0.45</version>
+            <version>2.0.48.android8</version>
         </dependency>
 
     </dependencies>
@@ -138,5 +138,11 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id/>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 
 </project>
